# vlmCaption

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
vlm/: config.py  data.py  inference.py  model.py  train.py  utils.py
